# Django-rest-tut

./: README.md  pyproject.toml
framework/api/: urls.py  views.py
framework/api/migrations/: 0001_initial.py
framework/framework/: settings.py  urls.py
